--- a/src/components/TimePicker.module.css
+++ b/src/components/TimePicker.module.css
@@ -87,7 +87,10 @@
     font-size: 3rem;
     font-weight: 700;
     color: var(--muted);
-    line-height: 1.2;
+    line-height: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
 }
 
 /* Hidden input for typing */
@@ -196,6 +199,10 @@
 }
 
 @media (max-width: 480px) {
+    .pickerWrapper {
+        gap: 0.5rem;
+    }
+
     .column {
         width: 60px;
         height: 100px;
@@ -203,7 +210,13 @@
 
     .digit {
         height: 50px;
-        font-size: 2.5rem;
+        font-size: 2.25rem;
+    }
+
+    .separator {
+        font-size: 2.25rem;
+        height: 50px;
+        line-height: 50px;
     }
 
     .selectionIndicator {
